--- a/public/wcamview.html
+++ b/public/wcamview.html
@@ -7,6 +7,9 @@
     <title>VIEW</title>
 </head>
 <body>
+    <h1>Webcam Live stream output</h1> 
+    <h3>here you go: </h3>
+    
     <img id='preview'>
 
     <p id='some'>what?</p>
